# vector-chat-rs

./: .gitignore  Cargo.toml  README.md
data/: demo.txt
src/: clients.rs  config.rs  lib.rs  main.rs
src/cli/: chat.rs  embed.rs  mod.rs
src/services/: chunker.rs  mod.rs  qdrant_service.rs
