[package]
name = "vector-chat"
version = "0.1.0"
edition = "2021"
description = "A Rust implementation providing text embedding with OpenAI and Qdrant, semantic search, and AI-powered chat with context."
authors = ["Josue Gutierrez <josue.ggh@gmail.com>"]
readme = "README.md"

[dependencies]
# Core dependencies
tokio = { version = "1.35.1", features = ["full"] }
async-trait = "0.1.77"
dotenv = "0.15.0"
log = "0.4.20"
env_logger = "0.10.1"
anyhow = "1.0.79"
thiserror = "1.0.56"
once_cell = "1.19.0"

# HTTP client
reqwest = { version = "0.11.22", features = ["json"] }

# CLI and text handling
clap = { version = "4.4.12", features = ["derive"] }
rustyline = "13.0.0"
colored = "2.0.4"

# Text processing
regex = "1.10.2"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"

[lib]
name = "vector_chat"
path = "src/lib.rs"

[[bin]]
name = "vector-chat"
path = "src/main.rs" 